@@ -10,7 +10,7 @@ Andreas Andersson aka Pitch: Drill file support hacker and constructive ideas.
 
 Trevor Blackwell
 
-Stuart Brorson : Layer statistics, release engineer
+Stuart Brorson : Layer statistics, release engineer, UI improvements
 
 David Carr
 
@@ -24,7 +24,7 @@ Dan McMahill : Build system, portability and bug fixes, misc. features
 
 Tomasz Motylewski
 
-Stefan Petersen: Project founder and main hacker.
+Stefan Petersen: Project founder, and main developer for many years
 
 Joost Witteveen
 
