@@ -80,6 +80,10 @@
 extern gerbv_screen_t screen;
 extern gerbv_render_info_t screenRenderInfo;
 
+extern const char *authors_string_array[];
+extern const char *bugs_string_array[];
+
+
 /* These are the names of the valid apertures.  These
  * values are used in several places in this file.
  * Please keep this in sync with the gerbv_aperture_type_t 
@@ -1328,8 +1332,6 @@ callbacks_about_activate                     (GtkMenuItem     *menuitem,
 					 "You should have received a copy of the GNU General Public License\n"
 					 "along with this program.  If not, see <http://www.gnu.org/licenses/>.");
 
-	/* Note:  set_authors works strangely.... */
-	#include "authors.c"
 
 	aboutdialog1 = gtk_about_dialog_new ();
 	gtk_container_set_border_width (GTK_CONTAINER (aboutdialog1), 5);
@@ -1339,7 +1341,9 @@ callbacks_about_activate                     (GtkMenuItem     *menuitem,
 	/* gtk_about_dialog_set_translator_credits (GTK_ABOUT_DIALOG (aboutdialog1), translators); */
 	gtk_about_dialog_set_comments (GTK_ABOUT_DIALOG (aboutdialog1), string);
 	gtk_about_dialog_set_license(GTK_ABOUT_DIALOG (aboutdialog1), license);
-	gtk_about_dialog_set_authors(GTK_ABOUT_DIALOG (aboutdialog1), authors);
+
+	/* The authors.c file is autogenerated at build time */
+	gtk_about_dialog_set_authors(GTK_ABOUT_DIALOG (aboutdialog1), authors_string_array);
 	gtk_about_dialog_set_website(GTK_ABOUT_DIALOG (aboutdialog1), "http://gerbv.sf.net/");
 
 	g_signal_connect (G_OBJECT(aboutdialog1),"response",
@@ -1366,6 +1370,57 @@ callbacks_about_activate                     (GtkMenuItem     *menuitem,
 
 	gtk_widget_show_all(GTK_WIDGET(aboutdialog1));
 
+}
+
+/* --------------------------------------------------------- */
+/**
+  * The help -> bugs menu item was selected.  
+  * Show the known bugs window
+  *
+  */
+void
+callbacks_bugs_activate (GtkMenuItem     *menuitem,
+                             gpointer         user_data)
+{
+    int i;
+    
+    /* Create the top level dialog widget with an OK button */
+    GtkWidget *bugs_dialog = gtk_dialog_new_with_buttons("Known bugs in gerbv",
+							 NULL,
+							 GTK_DIALOG_DESTROY_WITH_PARENT,
+							 GTK_STOCK_OK, GTK_RESPONSE_ACCEPT,
+							 NULL);
+    gtk_container_set_border_width (GTK_CONTAINER (bugs_dialog), 5);
+    gtk_dialog_set_default_response (GTK_DIALOG(bugs_dialog),
+				     GTK_RESPONSE_ACCEPT);
+    g_signal_connect (G_OBJECT(bugs_dialog), "response",
+		      G_CALLBACK (gtk_widget_destroy), GTK_WIDGET(bugs_dialog));
+    
+    /* First create single bugs_string from bugs_string_array */
+    GString *bugs_string = g_string_new(NULL);
+    for (i=0; bugs_string_array[i] != NULL; i++) {
+	g_string_append_printf(bugs_string, 
+			       "%s\n",
+			       bugs_string_array[i]);
+    }
+    
+    /* Create GtkLabel to hold text */
+    GtkWidget *bugs_label = gtk_label_new (bugs_string->str);
+    g_string_free(bugs_string, TRUE);
+    gtk_misc_set_alignment(GTK_MISC(bugs_label), 0, 0);
+    gtk_misc_set_padding(GTK_MISC(bugs_label), 13, 13);
+    
+    /* Put text into scrolled window */
+    GtkWidget *bugs_window = gtk_scrolled_window_new (NULL, NULL);
+    gtk_scrolled_window_add_with_viewport(GTK_SCROLLED_WINDOW(bugs_window),
+                                          GTK_WIDGET(bugs_label));
+    gtk_widget_set_size_request(GTK_WIDGET(bugs_window), 600, 300);
+    gtk_container_add(GTK_CONTAINER(GTK_DIALOG(bugs_dialog)->vbox),
+                      GTK_WIDGET(bugs_window));
+
+    gtk_widget_show_all(GTK_WIDGET(bugs_dialog));
+    gtk_dialog_run(GTK_DIALOG(bugs_dialog));
+    
 }
 
 /* --------------------------------------------------------- */
