@@ -1,3 +1,4 @@
+2008-08-24 : 2.1.0 release.  Added features for object selection & deletion.
 2008-02-07 : 2.0.1 release.  This is largely a bugfix release.
 2008-01-13 : 2.0.0 general release.  Introduced new look for gerbv.
 2008-01-09 : 2.0.0-beta release.
